# professor-skills

./: README.md  pyproject.toml  requirements.txt  sinister_skeleton.ipynb
